fix: shadow and border collapse

--- a/src/assets/scss/_snippets.scss
+++ b/src/assets/scss/_snippets.scss
@@ -6,6 +6,4 @@
   height: 85px;
 
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
 }
